// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A H3 Element applies lightWeight modifier 1`] = `
<h3
  className="sc-bdVaJa fiRqzR"
>
  Header Element
</h3>
`;

exports[`A H3 Element renders correctly 1`] = `
<h3
  className="sc-bdVaJa jBxvRE"
>
  Header Element
</h3>
`;
